# agent-wears-prada-bad-agent

./: .gitignore  Dockerfile  README.md  agent.json  agent.py  requirements.txt  run.sh  tracing.py
agent-code/: Dockerfile  agent.json  agent.py  pyproject.toml  run.sh  test_support_ticket_skill.py  tracing.py
agent-code/skills/handle-support-ticket/: SKILL.md
skills/handle-support-ticket/: SKILL copy.md  SKILL.md
