[project]
name = "agent-wears-prada-bad-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=17.14.0",
    "arize-phoenix-client>=2.11.0",
    "arize-phoenix-evals>=3.1.0",
    "arize-phoenix-otel>=0.16.1",
    "datarobot>=3.17.0",
    "deepagents>=0.6.12",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langgraph-cli[inmem]>=0.4.30",
    "openinference-instrumentation-langchain>=0.1.67",
    "python-dotenv>=1.2.2",
]
